--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,11 @@ services:
       - "5432:5432"
     volumes:
       - db_data:/var/lib/postgresql/data
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U loyalty -d loyalty"]
+      interval: 5s
+      timeout: 5s
+      retries: 10
   backend:
     build: ./backend
     environment:
@@ -21,21 +26,39 @@ services:
       JWT_REFRESH_DAYS: "7"
       MAX_EARN_PER_DAY_PER_CARD: "100000"
       MAX_OPS_PER_HOUR_PER_STAFF: "120"
-      SMTP_HOST: ""
-      SMTP_PORT: "587"
-      SMTP_USER: ""
-      SMTP_PASSWORD: ""
-      SMTP_USE_TLS: "1"
-      EMAIL_FROM: "no-reply@loyalty.local"
+      EMAIL_BACKEND: "django.core.mail.backends.console.EmailBackend"
+      EMAIL_HOST: ""
+      EMAIL_PORT: "587"
+      EMAIL_HOST_USER: ""
+      EMAIL_HOST_PASSWORD: ""
+      EMAIL_USE_TLS: "1"
+      EMAIL_USE_SSL: "0"
+      DEFAULT_FROM_EMAIL: "no-reply@loyalty.local"
       OTP_RATE_LIMIT_PER_HOUR: "5"
       EMAIL_CODE_RATE_LIMIT_PER_HOUR: "5"
+      SEED_DEMO: "1"
     volumes:
       - ./backend:/app
     ports:
       - "8000:8000"
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+    entrypoint: ["/app/entrypoint.sh"]
+    command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+  frontend:
+    build: ./frontend
+    environment:
+      VITE_API_BASE: http://localhost:8000/api/v1
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    ports:
+      - "5173:5173"
+    depends_on:
+      backend:
+        condition: service_started
     command: >
-      sh -c "python manage.py makemigrations loyalty && python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
+      sh -c "npm install && npm run dev -- --host 0.0.0.0 --port 5173"
 volumes:
   db_data:
