--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,5 +60,23 @@ services:
         condition: service_started
     command: >
       sh -c "npm install && npm run dev -- --host 0.0.0.0 --port 5173"
+  telegram-bot:
+    build: ./backend
+    profiles: ["telegram"]
+    environment:
+      DJANGO_DEBUG: "1"
+      DJANGO_SECRET_KEY: dev-secret-key
+      DJANGO_ALLOWED_HOSTS: "*"
+      DATABASE_URL: postgres://loyalty:loyalty@db:5432/loyalty
+      TELEGRAM_MODE: polling
+      TELEGRAM_BOT_TOKEN: ""
+      TELEGRAM_CODE_RATE_LIMIT_PER_HOUR: "5"
+      TELEGRAM_CHAT_RATE_LIMIT_PER_HOUR: "5"
+    volumes:
+      - ./backend:/app
+    depends_on:
+      db:
+        condition: service_healthy
+    command: ["python", "manage.py", "telegram_bot"]
 volumes:
   db_data:
