отключил лимиты запросов

--- a/.env.example
+++ b/.env.example
@@ -30,12 +30,13 @@ TELEGRAM_VERIFY_RATE_LIMIT_PER_HOUR=10
 
 ## Telegram bot
 TELEGRAM_BOT_TOKEN=8575236793:AAFccGoLTW8QEmpi-9KLFnenKNnPEXt1IXs
-TELEGRAM_BOT_USERNAME=app_messenger_bot
+TELEGRAM_BOT_USERNAME=app_messeger_bot
 TELEGRAM_MODE=polling
 TELEGRAM_DEV_MODE=0
+TELEGRAM_DISABLE_RATE_LIMIT=0
 TELEGRAM_WEBHOOK_URL=
 TELEGRAM_WEBHOOK_SECRET=
 
 ## Frontend
-VITE_API_BASE=http://localhost:8000/api/v1
-VITE_TELEGRAM_BOT_USERNAME=app_messenger_bot
+VITE_API_BASE=/api/v1
+VITE_TELEGRAM_BOT_USERNAME=app_messeger_bot
