--- a/.env
+++ b/.env
@@ -33,9 +33,10 @@ TELEGRAM_BOT_TOKEN=8575236793:AAFccGoLTW8QEmpi-9KLFnenKNnPEXt1IXs
 TELEGRAM_BOT_USERNAME=app_messeger_bot
 TELEGRAM_MODE=polling
 TELEGRAM_DEV_MODE=0
+TELEGRAM_DISABLE_RATE_LIMIT=1
 TELEGRAM_WEBHOOK_URL=
 TELEGRAM_WEBHOOK_SECRET=
 
 ## Frontend
-VITE_API_BASE=http://localhost:8000/api/v1
+VITE_API_BASE=/api/v1
 VITE_TELEGRAM_BOT_USERNAME=app_messeger_bot
