--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,68 +15,78 @@ services:
       interval: 5s
       timeout: 5s
       retries: 10
+    restart: unless-stopped
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "5"
   backend:
     build: ./backend
     env_file: .env
     environment:
-      DJANGO_DEBUG: "1"
-      DJANGO_SECRET_KEY: dev-secret-key
-      DJANGO_ALLOWED_HOSTS: "*"
-      DATABASE_URL: postgres://loyalty:loyalty@db:5432/loyalty
-      JWT_ACCESS_MINUTES: "30"
-      JWT_REFRESH_DAYS: "7"
-      MAX_EARN_PER_DAY_PER_CARD: "100000"
-      MAX_OPS_PER_HOUR_PER_STAFF: "120"
-      EMAIL_BACKEND: "django.core.mail.backends.console.EmailBackend"
-      EMAIL_HOST: ""
-      EMAIL_PORT: "587"
-      EMAIL_HOST_USER: ""
-      EMAIL_HOST_PASSWORD: ""
-      EMAIL_USE_TLS: "1"
-      EMAIL_USE_SSL: "0"
-      DEFAULT_FROM_EMAIL: "no-reply@loyalty.local"
-      OTP_RATE_LIMIT_PER_HOUR: "5"
-      EMAIL_CODE_RATE_LIMIT_PER_HOUR: "5"
-      SEED_DEMO: "1"
-    volumes:
-      - ./backend:/app
+      DJANGO_DEBUG: "${DJANGO_DEBUG:-0}"
+      DJANGO_COLLECTSTATIC: "${DJANGO_COLLECTSTATIC:-1}"
+      SEED_DEMO: "${SEED_DEMO:-0}"
+      DJANGO_USE_X_FORWARDED_HOST: "${DJANGO_USE_X_FORWARDED_HOST:-0}"
+      DJANGO_SECURE_PROXY_SSL_HEADER: "${DJANGO_SECURE_PROXY_SSL_HEADER:-0}"
+      DJANGO_SECURE_SSL_REDIRECT: "${DJANGO_SECURE_SSL_REDIRECT:-0}"
     ports:
       - "8000:8000"
     depends_on:
       db:
         condition: service_healthy
     entrypoint: ["/app/entrypoint.sh"]
-    command: ["python", "manage.py", "runserver", "0.0.0.0:8000"]
+    command: ["gunicorn", "config.wsgi:application", "--bind", "0.0.0.0:8000", "--workers", "${GUNICORN_WORKERS:-3}", "--threads", "${GUNICORN_THREADS:-2}", "--timeout", "${GUNICORN_TIMEOUT:-60}"]
+    healthcheck:
+      test: ["CMD-SHELL", "python -c \"import urllib.request; urllib.request.urlopen('http://127.0.0.1:8000/healthz', timeout=2).read()\""]
+      interval: 10s
+      timeout: 3s
+      retries: 6
+    restart: unless-stopped
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "5"
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+      args:
+        VITE_API_BASE: ${VITE_API_BASE}
     env_file: .env
-    environment:
-      VITE_API_BASE: http://localhost:8000/api/v1
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
     ports:
       - "5173:5173"
     depends_on:
       backend:
-        condition: service_started
-    command: >
-      sh -c "npm install && npm run dev -- --host 0.0.0.0 --port 5173"
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD-SHELL", "wget -qO- http://127.0.0.1:5173/healthz >/dev/null || exit 1"]
+      interval: 10s
+      timeout: 3s
+      retries: 6
+    restart: unless-stopped
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "5"
   telegram-bot:
     build: ./backend
     profiles: ["telegram"]
     env_file: .env
     environment:
-      DJANGO_DEBUG: "1"
-      DJANGO_SECRET_KEY: dev-secret-key
-      DJANGO_ALLOWED_HOSTS: "*"
-      DATABASE_URL: postgres://loyalty:loyalty@db:5432/loyalty
       TELEGRAM_MODE: polling
-    volumes:
-      - ./backend:/app
     depends_on:
       db:
         condition: service_healthy
+    entrypoint: ["/app/entrypoint.sh"]
     command: ["python", "manage.py", "telegram_bot"]
+    restart: unless-stopped
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "5"
 volumes:
   db_data:
